--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <nav class="navigasi">
         <h1>MIT+R</h1>
-        <a href="pr.html" target="_blank">⚓Home</a>
+        <a href="index.html" target="_blank">⚓Home</a>
         <a href="profile.html" target="_blank">Alamat</a>
         <a href="https://www.instagram.com/mitr_ipb?igsh=MWtkbWU0a3o2NTljeQ==" target="_blank">Instagram</a>
     </nav>
