--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="navigasi">
         <h1>MIT+R</h1>
         <a href="index.html" target="_blank">⚓Home</a>
-        <a href="https://itk.ipb.ac.id/" target="_blank">Alamat</a>
+        <a href="https://itk.ipb.ac.id" target="_blank">Alamat</a>
         <a href="https://www.instagram.com/mitr_ipb?igsh=MWtkbWU0a3o2NTljeQ==" target="_blank">Instagram</a>
     </nav>
 
